split_k8s_example/traffic_split.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-upstreams": "api:9091"
    spec:
      containers:
      - name: hello
        image: nicholasjackson/fake-service:v0.4.1
        ports:
        - containerPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v1
  labels:
    app: api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v1
  template:
    metadata:
      labels:
        app: api-v1
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/service-meta-version": "1"
        "consul.hashicorp.com/service-tags": "v1"
    spec:
      containers:
      - name: api
        image: nicholasjackson/fake-service:v0.4.1
        ports:
        - containerPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v2
  labels:
    app: api-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v2
  template:
    metadata:
      labels:
        app: api-v2
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/service-meta-version": "2"
        "consul.hashicorp.com/service-tags": "v2"
    spec:
      containers:
      - name: api
        image: nicholasjackson/fake-service:v0.4.1
        ports:
        - containerPort: 9090
---
apiVersion: specs.smi-spec.io/v1alpha1
kind: TCPRoute
metadata:
  name: api

---
kind: TrafficTarget
apiVersion: access.smi-spec.io/v1alpha1
metadata:
  name: api-targets
  namespace: default
destination:
  kind: ServiceAccount
  name: api
  namespace: default
sources:
- kind: ServiceAccount
  name: hello
  namespace: default
specs:
- kind: TCPRoute
  name: api
